--- a/java/amazon-kinesis-producer-sample/pom.xml
+++ b/java/amazon-kinesis-producer-sample/pom.xml
@@ -56,7 +56,7 @@
         <dependency>
             <groupId>com.amazonaws</groupId>
             <artifactId>amazon-kinesis-producer</artifactId>
-            <version>0.14.0-SNAPSHOT</version>
+            <version>0.14.1</version>
         </dependency>
         <dependency>
             <groupId>org.slf4j</groupId>
