--- a/.travis.yml
+++ b/.travis.yml
@@ -31,8 +31,10 @@ matrix:
         - echo "Getting Docker image for AL2012 build of KPL..."
         - docker pull 056543101242.dkr.ecr.us-west-2.amazonaws.com/kinesis-producer-library-builder:latest
         - ls
+        - df -h
+        - export TRAVIS_WORKER_DOCKER_MEMORY=20G
         - echo "Building KPL in current directory in the Container..."
-        - docker run --memory 12g -v $(pwd):/kpl -it 056543101242.dkr.ecr.us-west-2.amazonaws.com/kinesis-producer-library-builder:latest /bin/bash -c "export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY && export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID && cd /kpl && ls && ./bootstrap.sh"
+        - docker run --memory 20g -v $(pwd):/kpl -it 056543101242.dkr.ecr.us-west-2.amazonaws.com/kinesis-producer-library-builder:latest /bin/bash -c "export AWS_SECRET_ACCESS_KEY=$AWS_SECRET_ACCESS_KEY && export AWS_ACCESS_KEY_ID=$AWS_ACCESS_KEY_ID && cd /kpl && ls && ./bootstrap.sh"
         - cd java/amazon-kinesis-producer/src/main/resources/amazon-kinesis-producer-native-binaries/$TRAVIS_OS_NAME
         - ls
         - sudo zip kinesis-producer.zip kinesis_producer
