update homebrew false

--- a/.travis.yml
+++ b/.travis.yml
@@ -52,7 +52,7 @@ matrix:
           - maven
           - ant
           - awscli
-          update: true
+          update: false
       script:
        - DIR=$(pwd)
        - ./bootstrap.sh
