update homebrew false

--- a/.travis.yml
+++ b/.travis.yml
@@ -49,6 +49,7 @@ matrix:
       addons:
         homebrew:
           packages:
+          - ant
           - awscli
           update: true
       script:
