--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -92,6 +92,11 @@
             <version>${aws-sdk-core-version}</version>
         </dependency>
         <dependency>
+            <groupId>software.aws.glue</groupId>
+            <artifactId>schema-registry-serde</artifactId>
+            <version>1.0.0</version>
+        </dependency>
+        <dependency>
             <groupId>junit</groupId>
             <artifactId>junit</artifactId>
             <version>4.13.1</version>
