Updating maven compiler version to use java 8 and taking care of comments.

--- a/.travis.yml
+++ b/.travis.yml
@@ -51,6 +51,7 @@ matrix:
           packages:
           - ant
           - awscli
+          update: true
       script:
        - DIR=$(pwd)
        - ./bootstrap.sh
