--- a/java/amazon-kinesis-producer/pom.xml
+++ b/java/amazon-kinesis-producer/pom.xml
@@ -92,7 +92,7 @@
             <version>${aws-sdk-core-version}</version>
         </dependency>
         <dependency>
-            <groupId>software.aws.glue</groupId>
+            <groupId>software.amazon.glue</groupId>
             <artifactId>schema-registry-serde</artifactId>
             <version>1.0.0</version>
         </dependency>
