Install wget for bootstrap

--- a/.travis.yml
+++ b/.travis.yml
@@ -10,6 +10,7 @@ matrix:
         - echo "################################################################################"
         - sudo apt-get update
         - sudo apt-get install -y ca-certificates
+        - sudo apt-get install -y wget
         - curl "https://awscli.amazonaws.com/awscli-exe-linux-x86_64.zip" -o "awscliv2.zip" 
         - unzip awscliv2.zip
         - sudo ./aws/install
