--- a/.github/workflows/maven.yml
+++ b/.github/workflows/maven.yml
@@ -27,9 +27,11 @@ jobs:
         java-version: '8'
         distribution: 'corretto'
         cache: maven
-    - name: Build with Maven
-      run: mvn -B package --file pom.xml -DskipTests
-
+    - name: Build kpl
+      run: mvn -B package --file java/amazon-kinesis-producer/pom.xml -DskipTests
+    - name: Build sample kpl
+      run: mvn -B package --file java/amazon-kinesis-producer-sample/pom.xml -DskipTests
+      
     # Optional: Uploads the full dependency graph to GitHub to improve the quality of Dependabot alerts this repository can receive
     - name: Update dependency graph
       uses: advanced-security/maven-dependency-submission-action@571e99aab1055c2e71a1e2309b9691de18d6b7d6
