--- a/java/amazon-kinesis-producer-sample/pom.xml
+++ b/java/amazon-kinesis-producer-sample/pom.xml
@@ -41,9 +41,9 @@
 
     <dependencies>
         <dependency>
-            <groupId>com.amazonaws</groupId>
+            <groupId>software.amazon.kinesis</groupId>
             <artifactId>amazon-kinesis-client</artifactId>
-            <version>1.14.8</version>
+            <version>3.0.1</version>
             <exclusions>
                 <exclusion>
                     <groupId>com.google.protobuf</groupId>
