Add StreamId support to KPL

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -55,6 +55,8 @@ set(SOURCE_FILES
         aws/kinesis/core/serializable_container.h
         aws/kinesis/core/shard_map.cc
         aws/kinesis/core/shard_map.h
+        aws/kinesis/core/stream_id_resolver.cc
+        aws/kinesis/core/stream_id_resolver.h
         aws/kinesis/core/user_record.cc
         aws/kinesis/core/user_record.h
         aws/metrics/accumulator.h
@@ -101,6 +103,7 @@ set(TESTS_SOURCE
     aws/kinesis/core/test/reducer_test.cc
     aws/kinesis/core/test/retrier_test.cc
     aws/kinesis/core/test/shard_map_test.cc
+    aws/kinesis/core/test/stream_id_resolver_test.cc
     aws/kinesis/core/test/test_utils.cc
     aws/kinesis/core/test/test_utils.h
     aws/kinesis/core/test/user_record_test.cc
@@ -250,9 +253,11 @@ set_property(TARGET LibSsl PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibCrypto)
 add_library(LibZ STATIC IMPORTED)
 set_property(TARGET LibZ PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libz.a)
 
-add_library(LibCurl STATIC IMPORTED)
-set_property(TARGET LibCurl PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libcurl.a)
-set_property(TARGET LibCurl PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES ${CMAKE_THREAD_LIBS_INIT} ${LIBRT_LIBRARIES} ${LIBDL_LIBRARIES} LibSsl LibZ)
+# Use system curl instead of static library
+find_package(CURL REQUIRED)
+add_library(LibCurl INTERFACE)
+target_link_libraries(LibCurl INTERFACE ${CURL_LIBRARIES})
+target_include_directories(LibCurl INTERFACE ${CURL_INCLUDE_DIRS})
 
 add_library(LibProto STATIC IMPORTED)
 set_property(TARGET LibProto PROPERTY IMPORTED_LOCATION ${THIRD_PARTY_LIB_DIR}/libprotobuf.a)
@@ -260,7 +265,7 @@ set_property(TARGET LibProto PROPERTY IMPORTED_LINK_INTERFACE_LIBRARIES LibZ)
 
 add_executable(kinesis_producer ${SOURCE_FILES} ${LOGGING_TRIGGERS} aws/kinesis/main.cc ${PROTO_GENERATED_SRCS} ${PROTO_GENERATED_HDRS})
 target_include_directories(kinesis_producer SYSTEM PUBLIC ${THIRD_PARTY_INCLUDE})
-target_link_libraries(kinesis_producer ${CMAKE_THREAD_LIBS_INIT} LibProto ${AWSSDK_LINK_LIBRARIES} ${LIBBACKTRACE_LIBRARIES} ${STATIC_LIBS} ${UUID_LIBRARIES} LibSsl LibCurl)
+target_link_libraries(kinesis_producer ${CMAKE_THREAD_LIBS_INIT} LibProto ${AWSSDK_LINK_LIBRARIES} ${LIBBACKTRACE_LIBRARIES} ${STATIC_LIBS} ${UUID_LIBRARIES} LibSsl LibCrypto LibCurl)
 
 add_executable(test_driver ${SOURCE_FILES} ${LOGGING_TRIGGERS} aws/kinesis/test_driver.cc ${PROTO_GENERATED_SRCS} ${PROTO_GENERATED_HDRS})
 target_include_directories(test_driver SYSTEM PUBLIC ${THIRD_PARTY_INCLUDE})
