--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -80,7 +80,7 @@ ConnectTimeout = 6000
 # connects with TLS.
 #
 # Expected pattern: ^([A-Za-z0-9-\\.]+)?$
-# KinesisEndpoint = 
+KinesisEndpoint = kinesis-hailstoneperf-pdx.pdx.proxy.amazon.com 
 
 # If true, throttled puts are not retried. The records that got throttled
 # will be failed immediately upon receiving the throttling error. This is
@@ -285,7 +285,7 @@ RequestTimeout = 6000
 # KinesisEndpoint for testing. Never disable this in production.
 #
 # Default: true
-VerifyCertificate = true
+VerifyCertificate = false
 
 # Sets the threading model that the native process will use.
 # Enum:
