Add maxUserRecordSize config for client-side record size check

--- a/java/amazon-kinesis-producer-sample/default_config.properties
+++ b/java/amazon-kinesis-producer-sample/default_config.properties
@@ -115,6 +115,14 @@ LogLevel = info
 # Maximum (inclusive): 256
 MaxConnections = 24
 
+# Maximum number of bytes to pack an unaggregated Kinesis record with.
+# Recommended to set to stream's max record size limit.
+#
+# Default: 1048576
+# Minimum: 64
+# Maximum (inclusive): 1048576
+MaxUserRecordSize = 1048576;
+
 # Controls the granularity of metrics that are uploaded to CloudWatch.
 # Greater granularity produces more metrics.
 #
